--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ numpy = "1.22.3"
 tabulate = "0.8.9"
 evo = "1.18.0"
 matplotlib = "3.5.1"
+pandas = "1.4.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.931"
