--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pandas = "1.4.1"
 mypy = "0.931"
 ipdb = "0.13.9"
 black = "22.1.0"
+pylint = "2.13.5"
+types-tabulate = "0.8.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
