--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Mateo de Mayo <mateo.demayo@collabora.com>"]
 license = "BSL-1.0"
 
 [tool.poetry.dependencies]
-python = "3.10"
+python = "~3.10"
 numpy = "1.22.3"
 tabulate = "0.8.9"
 evo = "1.18.0"
