--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ tabulate = "0.8.9"
 evo = "1.18.0"
 matplotlib = "3.5.1"
 pandas = "1.4.1"
+pyqt5 = "5.15.9"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.931"
