Show timestamps on hover

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ evo = "1.18.0"
 matplotlib = "3.5.1"
 pandas = "1.4.1"
 pyqt5 = "5.15.9"
+mplcursors = "^0.5.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.931"
