--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ black = "22.3.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+plugins = "numpy.typing.mypy_plugin"
