--- a/test/data/persistent-map-runs/settings.cfg
+++ b/test/data/persistent-map-runs/settings.cfg
@@ -30,4 +30,11 @@ msdmi_datasets=(
     "MIO11" # MIO11_short_3_backandforth
     "MIO12" # MIO12_moving_screens
     "MIO13" # MIO13_moving_person
+    "MIPB01" # MIPB01_beatsaber_100bills_360_normal
+    "MIPB02" # MIPB02_beatsaber_crabrave_360_hard
+    "MIPB03" # MIPB03_beatsaber_countryrounds_360_expert
+    "MIPB04" # MIPB04_beatsaber_fitbeat_hard
+    "MIPB05" # MIPB05_beatsaber_fitbeat_360_expert
+    "MIPB06" # MIPB06_beatsaber_fitbeat_expertplus_1
+    "MIPB07" # MIPB07_beatsaber_fitbeat_expertplus_2
 )
