Update persistent map run results

--- a/test/data/persistent-map-runs/settings.cfg
+++ b/test/data/persistent-map-runs/settings.cfg
@@ -5,36 +5,37 @@ show_gui=0
 
 # Datasets
 euroc_datasets=(
-    "EMH01" # MH_01_easy
-    "EMH02" # MH_02_easy
-    "EMH03" # MH_03_medium
-    "EMH04" # MH_04_difficult
-    "EMH05" # MH_05_difficult
-    "EV101" # V1_01_easy
-    "EV102" # V1_02_medium
-    "EV103" # V1_03_difficult
-    "EV201" # V2_01_easy
-    "EV202" # V2_02_medium
+    # "EMH01" # MH_01_easy
+    # "EMH02" # MH_02_easy
+    # "EMH03" # MH_03_medium
+    # "EMH04" # MH_04_difficult
+    # "EMH05" # MH_05_difficult
+    # "EV101" # V1_01_easy
+    # "EV102" # V1_02_medium
+    # "EV103" # V1_03_difficult
+    # "EV201" # V2_01_easy
+    # "EV202" # V2_02_medium
 )
 msdmi_datasets=(
-    "MIO01" # MIO01_hand_puncher_1
-    "MIO02" # MIO02_hand_puncher_2
-    "MIO03" # MIO03_hand_shooter_easy
-    "MIO04" # MIO04_hand_shooter_hard
-    "MIO05" # MIO05_inspect_easy
-    "MIO06" # MIO06_inspect_hard
-    "MIO07" # MIO07_mapping_easy
-    "MIO08" # MIO08_mapping_hard
-    "MIO09" # MIO09_short_1_updown
-    "MIO10" # MIO10_short_2_panorama
-    "MIO11" # MIO11_short_3_backandforth
-    "MIO12" # MIO12_moving_screens
-    "MIO13" # MIO13_moving_person
-    "MIPB01" # MIPB01_beatsaber_100bills_360_normal
-    "MIPB02" # MIPB02_beatsaber_crabrave_360_hard
-    "MIPB03" # MIPB03_beatsaber_countryrounds_360_expert
-    "MIPB04" # MIPB04_beatsaber_fitbeat_hard
-    "MIPB05" # MIPB05_beatsaber_fitbeat_360_expert
-    "MIPB06" # MIPB06_beatsaber_fitbeat_expertplus_1
-    "MIPB07" # MIPB07_beatsaber_fitbeat_expertplus_2
+    # "MIO01" # MIO01_hand_puncher_1
+    # "MIO02" # MIO02_hand_puncher_2
+    # "MIO03" # MIO03_hand_shooter_easy
+    # "MIO04" # MIO04_hand_shooter_hard
+    # "MIO05" # MIO05_inspect_easy
+    # "MIO06" # MIO06_inspect_hard
+    # "MIO07" # MIO07_mapping_easy
+    # "MIO08" # MIO08_mapping_hard
+    # "MIO09" # MIO09_short_1_updown
+    # "MIO10" # MIO10_short_2_panorama
+    # "MIO11" # MIO11_short_3_backandforth
+    # "MIO12" # MIO12_moving_screens
+    # "MIO13" # MIO13_moving_person
+    # "MIPB01" # MIPB01_beatsaber_100bills_360_normal
+    # "MIPB02" # MIPB02_beatsaber_crabrave_360_hard
+    # "MIPB03" # MIPB03_beatsaber_countryrounds_360_expert
+    # "MIPB04" # MIPB04_beatsaber_fitbeat_hard
+    # "MIPB05" # MIPB05_beatsaber_fitbeat_360_expert
+    # "MIPB06" # MIPB06_beatsaber_fitbeat_expertplus_1
+    # "MIPB07" # MIPB07_beatsaber_fitbeat_expertplus_2
+    "MIPP01" # MIPP01_pistolwhip_blackmagic_hard
 )
